--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.1" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -23,9 +23,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.vless.wificam.Splash"
+            android:name="com.vless.wificam.WelcomeActivity"
             android:label="@string/app_name"
-            android:noHistory="true" >
+            android:noHistory="true"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,11 +35,32 @@
         </activity>
         <activity
             android:name="com.vless.wificam.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+            <action android:name="android.intent.action.MainActivity" />
+
+            <category android:name="android.intent.category.DEFAULT" />
         </activity>
         <activity
-            android:name="com.vless.wificam.FileBrowser.VideoPlayerActivityty"
-            android:label="@string/app_name" >
+            android:name="com.vless.wificam.NetSettActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+            <action android:name="android.intent.action.NetSettActivity" />
+
+            <category android:name="android.intent.category.DEFAULT" />
+        </activity>
+        <activity
+            android:name="com.vless.wificam.CamSettActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+            <action android:name="android.intent.action.CamSettActivity" />
+
+            <category android:name="android.intent.category.DEFAULT" />
+        </activity>
+        <activity
+            android:name="com.vless.wificam.FileBrowser.VideoPlayerActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
